[fix] css, js 동적 참조

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <title>Education App</title>
+  <link href="%PUBLIC_URL%/static/css/main.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
+  <script src="%PUBLIC_URL%/static/js/main.js"></script>
 </body>
 </html>
