--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <title>Education App</title>
-  <link href="%PUBLIC_URL%/static/css/main.css" rel="stylesheet">
+  <!-- <link href="%PUBLIC_URL%/static/css/main.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
 </head>
 <body>
   <div id="root"></div>
-  <script src="%PUBLIC_URL%/static/js/main.js"></script>
+  <!-- <script src="%PUBLIC_URL%/static/js/main.js"></script> -->
+  <script src="%PUBLIC_URL%/main.js"></script>
 </body>
 </html>
