--- a/delete-page/index.html
+++ b/delete-page/index.html
@@ -5,12 +5,13 @@
     <title>계정 삭제 요청</title>
 </head>
 <body>
-    <h1>계정 및 데이터 삭제 요청 - [앱 이름]</h1>
+    <h1>계정 및 데이터 삭제 요청 - 티봇</h1>
     <p>여기에서 사용자는 계정 및 관련 데이터를 삭제 요청할 수 있습니다.</p>
     <h2>1. 계정 삭제 요청 절차</h2>
     <p>계정을 삭제하려면 아래 단계를 따라주세요:</p>
     <ol>
-        <li>계정 이메일 주소와 함께 삭제 요청을 보내주세요.</li>
+        <li>학생 - 계정 학교명, 학년, 반, 이름과 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
+        <li>교사 - 계정 이메일 주소(아이디)와 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
         <li>요청을 확인한 후, 7일 이내에 계정을 삭제하고 확인 이메일을 보내드립니다.</li>
     </ol>
     <h2>2. 삭제/보관되는 데이터 유형</h2>
@@ -19,11 +20,12 @@
         <li>이름</li>
         <li>이메일 주소</li>
         <li>사용 기록</li>
+        <li>기타 모든 개인 정보</li>
     </ul>
     <p>보관되는 데이터:</p>
     <ul>
         <li>법적 요구사항에 따라 보관되는 데이터 (최대 1년)</li>
     </ul>
-    <p>자세한 문의 사항이 있으시면 [연락처 정보]로 연락해주세요.</p>
+    <p>자세한 문의 사항이 있으시면 gun9311@gmail.com으로 연락해주세요.</p>
 </body>
 </html>
