--- a/delete-page/index.html
+++ b/delete-page/index.html
@@ -10,7 +10,7 @@
     <h2>1. 계정 삭제 요청 절차</h2>
     <p>계정을 삭제하려면 아래 단계를 따라주세요:</p>
     <ol>
-        <li>학생 - 계정 학교명, 학년, 반, 이름과 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
+        <li>학생 - 계정 학교명, 학년, 반, 번호, 이름과 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
         <li>교사 - 계정 이메일 주소(아이디)와 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
         <li>요청을 확인한 후, 7일 이내에 계정을 삭제하고 확인 이메일을 보내드립니다.</li>
     </ol>
