--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p><strong>유효 기간:</strong> 2024.8.16 이후</p>
 
     <h2>1. 개요</h2>
-    <p>이 개인정보처리방침은 티봇 ("우리", "우리의", 또는 "회사")가 어린이의 개인 정보를 어떻게 수집, 사용, 보호, 및 공유하는지 설명합니다. 우리는 어린이의 개인정보를 보호하기 위해 최선을 다하고 있습니다.</p>
+    <p>이 개인정보처리방침은 NUDGE ("우리", "우리의", 또는 "회사")가 어린이의 개인 정보를 어떻게 수집, 사용, 보호, 및 공유하는지 설명합니다. 우리는 어린이의 개인정보를 보호하기 위해 최선을 다하고 있습니다.</p>
 
     <h2>2. 수집하는 정보</h2>
     <p>우리는 어린이로부터 다음과 같은 정보를 수집할 수 있습니다:</p>
