--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <title>Education App</title>
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <title>NUDGE</title>
 </head>
 <body>
   <div id="root"></div>
