--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>이 개인정보처리방침은 때때로 업데이트될 수 있습니다. 중요한 변경 사항이 있을 경우, 우리는 부모 또는 보호자에게 고지할 것입니다. 이 정책의 변경 사항은 게시된 즉시 효력을 가집니다.</p>
 
     <h2>8. 문의</h2>
-    <p>개인정보처리방침에 대한 질문이나 우려 사항이 있으시면 gun9311@gmail.com로 연락해 주시기 바랍니다.</p>
+    <p>개인정보처리방침에 대한 질문이나 우려 사항이 있으시면 tbot17115@gmail.com로 연락해 주시기 바랍니다.</p>
 
     <h2>9. 동의</h2>
     <p>이 앱을 사용함으로써, 부모 또는 보호자는 이 개인정보처리방침에 동의하는 것으로 간주됩니다.</p>
