--- a/index.html
+++ b/index.html
@@ -3,53 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>개인정보처리방침</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            color: #333;
+        }
+        h1, h2 {
+            color: #0056b3;
+        }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+        h2 {
+            font-size: 1.5em;
+            margin-top: 1.5em;
+            margin-bottom: 0.5em;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+        ul {
+            margin-left: 20px;
+            padding-left: 0;
+        }
+        li {
+            margin-bottom: 0.5em;
+        }
+        .footer {
+            margin-top: 2em;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <h1>개인정보처리방침</h1>
-    <p><strong>유효 기간:</strong> 2024.8.16 이후</p>
+    <p><strong>유효 기간:</strong> 2024.12.28 이후</p>
+    <p>본 개인정보처리방침은 개인 개발자인 <strong>hypto</strong>("개발자", "우리", 또는 "저희")가 어린이의 개인정보를 수집, 사용, 보호 및 공유하는 방식을 설명합니다.</p>
 
-    <h2>1. 개요</h2>
-    <p>이 개인정보처리방침은 NUDGE ("우리", "우리의", 또는 "회사")가 어린이의 개인 정보를 어떻게 수집, 사용, 보호, 및 공유하는지 설명합니다. 우리는 어린이의 개인정보를 보호하기 위해 최선을 다하고 있습니다.</p>
+    <h2>1. 개발자 정보</h2>
+    <ul>
+        <li><strong>개발자 이름:</strong> hypto</li>
+        <li><strong>연락처:</strong> tbot17115@gmail.com</li>
+    </ul>
 
     <h2>2. 수집하는 정보</h2>
-    <p>우리는 어린이로부터 다음과 같은 정보를 수집할 수 있습니다:</p>
     <ul>
-        <li>학교, 학년, 반 번호</li>
-        <li>사용자 이름</li>
+        <li><strong>사용자 제공 정보:</strong> 학교, 학년, 반 번호, 사용자 이름</li>
+        <li><strong>자동 수집 정보:</strong> IP 주소, 디바이스 정보(운영체제, 브라우저 유형), 쿠키 및 유사 기술</li>
     </ul>
+    <p><strong>참고:</strong> 민감한 정보(예: 건강, 금융 정보)는 수집하지 않습니다.</p>
 
-    <h2>3. 정보의 사용</h2>
-    <p>우리는 수집한 정보를 다음과 같은 목적으로 사용합니다:</p>
+    <h2>3. 개인정보 수집 및 사용 목적</h2>
     <ul>
-        <li>계정 생성 및 관리</li>
+        <li>사용자 계정 생성 및 관리</li>
         <li>서비스 제공 및 유지</li>
         <li>법적 요구사항 준수</li>
+        <li>서비스 개선 및 사용자 피드백 분석</li>
     </ul>
 
-    <h2>4. 정보의 공유</h2>
-    <p>우리는 어린이의 개인정보를 다음과 같은 경우에만 공유합니다:</p>
+    <h2>4. 개인정보의 공유</h2>
+    <p>개발자는 다음의 경우를 제외하고 개인정보를 공유하지 않습니다:</p>
     <ul>
-        <li>부모 또는 보호자의 동의가 있는 경우</li>
-        <li>법적 요구사항 준수를 위해 필요한 경우</li>
+        <li>부모 또는 보호자의 동의를 받은 경우</li>
+        <li>법적 요구사항(법원 명령, 정부 요청 등)을 준수하기 위해 필요한 경우</li>
     </ul>
+    <p><strong>참고:</strong> 수집된 개인정보는 제3자에게 판매하거나 공유하지 않습니다.</p>
 
     <h2>5. 부모의 권리</h2>
-    <p>부모 또는 보호자는 언제든지 자녀의 개인정보에 접근하거나 이를 수정, 삭제할 권리가 있습니다. 이러한 요청이 있을 경우, gun9311@gmail.com으로 연락해 주시기 바랍니다.</p>
+    <p>부모 또는 보호자는 자녀의 개인정보에 대해 다음 권리를 가집니다:</p>
+    <ul>
+        <li>개인정보 열람, 수정, 삭제 요청</li>
+        <li>데이터 수집 및 사용 철회</li>
+    </ul>
+    <p>문의사항은 <strong>tbot17115@gmail.com</strong>으로 요청해 주시기 바랍니다.</p>
 
-    <h2>6. 데이터 보안</h2>
-    <p>우리는 어린이의 개인정보를 보호하기 위해 적절한 보안 조치를 취하고 있습니다. 하지만, 인터넷을 통한 정보 전송은 완벽하게 안전하지 않을 수 있음을 인지해 주시기 바랍니다.</p>
+    <h2>6. 데이터 보관 및 삭제</h2>
+    <ul>
+        <li>개인정보는 서비스 제공 기간 동안 보관됩니다.</li>
+        <li>부모의 요청 또는 계정 비활성화 시 즉시 삭제됩니다.</li>
+        <li>법적 요구에 따라 특정 정보는 일정 기간 보관될 수 있습니다.</li>
+    </ul>
 
-    <h2>7. 정책 변경</h2>
-    <p>이 개인정보처리방침은 때때로 업데이트될 수 있습니다. 중요한 변경 사항이 있을 경우, 우리는 부모 또는 보호자에게 고지할 것입니다. 이 정책의 변경 사항은 게시된 즉시 효력을 가집니다.</p>
+    <h2>7. 데이터 보안</h2>
+    <p>개발자는 개인정보를 보호하기 위해 다음 조치를 취합니다:</p>
+    <ul>
+        <li>SSL 암호화를 통해 데이터 전송 보호</li>
+        <li>데이터 접근 통제 및 비밀번호로 보호된 환경 운영</li>
+        <li>정기적인 보안 점검</li>
+    </ul>
+    <p><strong>참고:</strong> 인터넷을 통한 데이터 전송은 완벽히 안전하지 않을 수 있습니다.</p>
 
-    <h2>8. 문의</h2>
-    <p>개인정보처리방침에 대한 질문이나 우려 사항이 있으시면 tbot17115@gmail.com로 연락해 주시기 바랍니다.</p>
+    <h2>8. 정책 변경</h2>
+    <p>본 개인정보처리방침은 수시로 업데이트될 수 있습니다.</p>
+    <ul>
+        <li>중요한 변경 사항은 부모 또는 보호자에게 앱 내 알림을 통해 고지합니다.</li>
+        <li>변경된 방침은 게시 즉시 효력을 가집니다.</li>
+    </ul>
 
-    <h2>9. 동의</h2>
-    <p>이 앱을 사용함으로써, 부모 또는 보호자는 이 개인정보처리방침에 동의하는 것으로 간주됩니다.</p>
+    <h2>9. 문의</h2>
+    <p>개인정보처리방침과 관련된 질문이나 우려 사항이 있으시면 아래로 연락해 주세요:</p>
+    <ul>
+        <li><strong>이메일:</strong> tbot17115@gmail.com</li>
+        <li><strong>전화번호:</strong> [선택적으로 추가]</li>
+        <li><strong>주소:</strong> [선택적으로 추가]</li>
+    </ul>
 
-    <h2>10. COPPA 준수</h2>
-    <p>우리는 COPPA(Children's Online Privacy Protection Act) 및 기타 관련 법률을 준수합니다. 어린이의 개인정보를 보호하기 위해 필요한 모든 조치를 취하고 있습니다.</p>
+    <h2>10. 동의</h2>
+    <p>부모 또는 보호자는 앱을 사용함으로써 본 개인정보처리방침에 동의한 것으로 간주됩니다.</p>
+
+    <h2>11. COPPA 준수</h2>
+    <p>개발자는 COPPA(Children’s Online Privacy Protection Act) 및 관련 법률을 준수합니다.</p>
+    <ul>
+        <li>만 13세 미만 어린이의 개인정보는 부모의 동의 없이는 수집하지 않습니다.</li>
+        <li>어린이 개인정보 보호를 위한 기술적, 관리적 조치를 이행하고 있습니다.</li>
+    </ul>
+
+    <div class="footer">
+        <p>© 2024 hypto. All rights reserved.</p>
+    </div>
 </body>
 </html>
