--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <h1>개인정보처리방침</h1>
     <p><strong>유효 기간:</strong> 2024.12.28 이후</p>
-    <p>본 개인정보처리방침은 개인 개발자인 <strong>hypto</strong>("개발자", "우리", 또는 "저희")가 어린이의 개인정보를 수집, 사용, 보호 및 공유하는 방식을 설명합니다.</p>
+    <p>본 개인정보처리방침은 개인 개발자인 <strong>hypto</strong>("개발자", "우리", 또는 "저희")가 어린이를 포함한 사용자의 개인정보를 수집, 사용, 보호 및 공유하는 방식을 설명합니다.</p>
 
     <h2>1. 개발자 정보</h2>
     <ul>
