--- a/delete-page/index.html
+++ b/delete-page/index.html
@@ -2,30 +2,29 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>계정 삭제 요청</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>계정 및 데이터 삭제 요청 - 넛지Edu</title>
 </head>
 <body>
-    <h1>계정 및 데이터 삭제 요청 - 티봇</h1>
-    <p>여기에서 사용자는 계정 및 관련 데이터를 삭제 요청할 수 있습니다.</p>
-    <h2>1. 계정 삭제 요청 절차</h2>
-    <p>계정을 삭제하려면 아래 단계를 따라주세요:</p>
+    <h1>계정 및 데이터 삭제 안내 - 넛지Edu</h1>
+    <p><strong>넛지Edu</strong> 앱에서는 사용자가 앱 내부에서 계정을 직접 삭제할 수 있는 기능을 제공합니다. 개인정보 보호를 최우선으로 하여, 사용자가 계정 삭제를 요청할 경우 모든 데이터를 신속히 삭제 처리합니다.</p>
+    
+    <h2>1. 앱 내에서 계정 삭제하는 방법</h2>
+    <p>계정을 삭제하려면 다음 단계를 따라주세요:</p>
     <ol>
-        <li>학생 - 계정 학교명, 학년, 반, 번호, 이름과 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
-        <li>교사 - 계정 이메일 주소(아이디)와 함께 gun9311@gmail.com으로 삭제 요청을 보내주세요.</li>
-        <li>요청을 확인한 후, 7일 이내에 계정을 삭제하고 확인 이메일을 보내드립니다.</li>
+        <li>앱을 실행합니다.</li>
+        <li>하단의 네브바에서 <strong>프로필</strong> 아이콘을 클릭합니다.</li>
+        <li>프로필 하단에 있는 <strong>계정 삭제</strong> 버튼을 누릅니다.</li>
+        <li>계정 삭제 확인 메시지가 표시되면 확인을 누르면 삭제가 완료됩니다.</li>
     </ol>
-    <h2>2. 삭제/보관되는 데이터 유형</h2>
-    <p>삭제되는 데이터 유형:</p>
+
+    <h2>2. 삭제되는 데이터 유형</h2>
+    <p>계정 삭제 시 아래 데이터를 삭제 처리합니다:</p>
     <ul>
-        <li>이름</li>
-        <li>이메일 주소</li>
-        <li>사용 기록</li>
-        <li>기타 모든 개인 정보</li>
+        <li>계정과 관련된 모든 정보</li>
     </ul>
-    <p>보관되는 데이터:</p>
-    <ul>
-        <li>법적 요구사항에 따라 보관되는 데이터 (최대 1년)</li>
-    </ul>
-    <p>자세한 문의 사항이 있으시면 gun9311@gmail.com으로 연락해주세요.</p>
+
+    <h2>3. 문의 사항</h2>
+    <p>계정 삭제와 관련하여 추가 문의 사항이 있으시면 <a href="mailto:tbot17115@gmail.com">tbot17115@gmail.com</a>으로 언제든지 연락해 주세요.</p>
 </body>
 </html>
