[fix] CSS 파일 미리 로드

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <title>NUDGE</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>NUDGE</title>
+    <link
+      rel="preload"
+      href="%PUBLIC_URL%/static/css/main.css"
+      as="style"
+      onload="this.rel='stylesheet'"
+    />
+    <noscript
+      ><link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.css"
+    /></noscript>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
