--- a/index.html
+++ b/index.html
@@ -1,129 +1,135 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보처리방침</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            padding: 0;
-            color: #333;
-        }
-        h1, h2 {
-            color: #0056b3;
-        }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 0.5em;
-        }
-        h2 {
-            font-size: 1.5em;
-            margin-top: 1.5em;
-            margin-bottom: 0.5em;
-        }
-        p {
-            margin-bottom: 1em;
-        }
-        ul {
-            margin-left: 20px;
-            padding-left: 0;
-        }
-        li {
-            margin-bottom: 0.5em;
-        }
-        .footer {
-            margin-top: 2em;
-            font-size: 0.9em;
-            color: #666;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>개인정보처리방침</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+      padding: 0;
+      color: #333;
+    }
+    h1, h2 {
+      color: #0056b3;
+    }
+    h1 {
+      font-size: 2em;
+      margin-bottom: 0.5em;
+    }
+    h2 {
+      font-size: 1.5em;
+      margin-top: 1.5em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      margin-bottom: 1em;
+    }
+    ul {
+      margin-left: 20px;
+      padding-left: 0;
+    }
+    li {
+      margin-bottom: 0.5em;
+    }
+    .footer {
+      margin-top: 2em;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-    <h1>개인정보처리방침</h1>
-    <p><strong>유효 기간:</strong> 2024.12.28 이후</p>
-    <p>본 개인정보처리방침은 개인 개발자인 <strong>hypto</strong>("개발자", "우리", 또는 "저희")가 어린이를 포함한 사용자의 개인정보를 수집, 사용, 보호 및 공유하는 방식을 설명합니다.</p>
+  <h1>개인정보처리방침</h1>
+  <p><strong>시행일:</strong> 2025년 4월 25일</p>
+  <p>
+    본 개인정보처리방침은 개인 개발자 <strong>hypto</strong>("개발자", "우리")가 제공하는 서비스 이용 시,
+    사용자의 개인정보를 어떤 방식으로 수집·이용·보관·처리하는지를 설명합니다.
+    「개인정보 보호법」 및 관련 법령을 준수합니다.
+  </p>
 
-    <h2>1. 개발자 정보</h2>
-    <ul>
-        <li><strong>개발자 이름:</strong> hypto</li>
-        <li><strong>연락처:</strong> tbot17115@gmail.com</li>
-    </ul>
+  <h2>1. 개인정보처리자 정보</h2>
+  <ul>
+    <li><strong>개발자:</strong> hypto</li>
+    <li><strong>연락처:</strong> tbot17115@gmail.com</li>
+  </ul>
 
-    <h2>2. 수집하는 정보</h2>
-    <ul>
-        <li><strong>사용자 제공 정보:</strong> 학교, 학년, 반 번호, 사용자 이름</li>
-        <li><strong>자동 수집 정보:</strong> IP 주소, 디바이스 정보(운영체제, 브라우저 유형), 쿠키 및 유사 기술</li>
-    </ul>
-    <p><strong>참고:</strong> 민감한 정보(예: 건강, 금융 정보)는 수집하지 않습니다.</p>
+  <h2>2. 수집하는 개인정보 항목 및 방법</h2>
+  <ul>
+    <li><strong>수집 항목:</strong> 이름, 학교, 학년, 반, IP 주소, 브라우저·OS 등 디바이스 정보</li>
+    <li><strong>수집 방법:</strong> 회원가입 및 서비스 이용 시, 자동 수집</li>
+    <li><strong>수집 목적:</strong> 회원 관리, 서비스 제공, 통계 분석, 보안 유지</li>
+    <li><strong>보관 기간:</strong> 회원 탈퇴 또는 동의 철회 시까지 보관하며, 관련 법령에 따라 일정 기간 보존 가능</li>
+  </ul>
 
-    <h2>3. 개인정보 수집 및 사용 목적</h2>
-    <ul>
-        <li>사용자 계정 생성 및 관리</li>
-        <li>서비스 제공 및 유지</li>
-        <li>법적 요구사항 준수</li>
-        <li>서비스 개선 및 사용자 피드백 분석</li>
-    </ul>
+  <h2>3. 개인정보의 수집 및 이용 목적</h2>
+  <ul>
+    <li>회원 식별 및 본인 확인</li>
+    <li>서비스 제공 및 개선</li>
+    <li>고객 응대 및 민원 처리</li>
+    <li>법령 준수 및 이용 기록 분석</li>
+  </ul>
 
-    <h2>4. 개인정보의 공유</h2>
-    <p>개발자는 다음의 경우를 제외하고 개인정보를 공유하지 않습니다:</p>
-    <ul>
-        <li>부모 또는 보호자의 동의를 받은 경우</li>
-        <li>법적 요구사항(법원 명령, 정부 요청 등)을 준수하기 위해 필요한 경우</li>
-    </ul>
-    <p><strong>참고:</strong> 수집된 개인정보는 제3자에게 판매하거나 공유하지 않습니다.</p>
+  <h2>4. 제3자 제공</h2>
+  <p>
+    개발자는 사용자 동의 없이 개인정보를 제3자에게 제공하지 않습니다.
+    단, 아래의 경우는 예외로 합니다:
+  </p>
+  <ul>
+    <li>정보주체의 동의를 받은 경우</li>
+    <li>법령에 의거하거나 수사기관 요청이 있는 경우</li>
+  </ul>
 
-    <h2>5. 부모의 권리</h2>
-    <p>부모 또는 보호자는 자녀의 개인정보에 대해 다음 권리를 가집니다:</p>
-    <ul>
-        <li>개인정보 열람, 수정, 삭제 요청</li>
-        <li>데이터 수집 및 사용 철회</li>
-    </ul>
-    <p>문의사항은 <strong>tbot17115@gmail.com</strong>으로 요청해 주시기 바랍니다.</p>
+  <h2>5. 개인정보의 처리 위탁</h2>
+  <p>서비스 운영을 위해 외부 업체에 다음과 같이 개인정보 처리 업무를 위탁할 수 있습니다.</p>
+  <ul>
+    <li><strong>수탁자:</strong> Amazon Web Services (AWS)</li>
+    <li><strong>위탁 내용:</strong> 클라우드 서버 및 데이터 보관</li>
+    <li><strong>보관 위치:</strong> 서울 리전 (ap-northeast-2)</li>
+  </ul>
 
-    <h2>6. 데이터 보관 및 삭제</h2>
-    <ul>
-        <li>개인정보는 서비스 제공 기간 동안 보관됩니다.</li>
-        <li>부모의 요청 또는 계정 비활성화 시 즉시 삭제됩니다.</li>
-        <li>법적 요구에 따라 특정 정보는 일정 기간 보관될 수 있습니다.</li>
-    </ul>
+  <h2>6. 아동의 개인정보 보호</h2>
+  <ul>
+    <li>만 14세 미만 아동의 개인정보는 법정대리인의 동의 없이 수집하지 않습니다.</li>
+    <li>법정대리인은 언제든지 아동의 개인정보에 대해 열람, 정정, 삭제 요청할 수 있습니다.</li>
+  </ul>
 
-    <h2>7. 데이터 보안</h2>
-    <p>개발자는 개인정보를 보호하기 위해 다음 조치를 취합니다:</p>
-    <ul>
-        <li>SSL 암호화를 통해 데이터 전송 보호</li>
-        <li>데이터 접근 통제 및 비밀번호로 보호된 환경 운영</li>
-        <li>정기적인 보안 점검</li>
-    </ul>
-    <p><strong>참고:</strong> 인터넷을 통한 데이터 전송은 완벽히 안전하지 않을 수 있습니다.</p>
+  <h2>7. 정보주체의 권리 및 행사 방법</h2>
+  <ul>
+    <li>개인정보 열람, 정정, 삭제, 처리 정지 요청 가능</li>
+    <li>요청은 이메일(tbot17115@gmail.com)을 통해 가능하며, 10일 이내에 답변드립니다.</li>
+  </ul>
 
-    <h2>8. 정책 변경</h2>
-    <p>본 개인정보처리방침은 수시로 업데이트될 수 있습니다.</p>
-    <ul>
-        <li>중요한 변경 사항은 부모 또는 보호자에게 앱 내 알림을 통해 고지합니다.</li>
-        <li>변경된 방침은 게시 즉시 효력을 가집니다.</li>
-    </ul>
+  <h2>8. 개인정보 파기 절차 및 방법</h2>
+  <ul>
+    <li>보유 기간 경과, 처리 목적 달성 시 즉시 파기</li>
+    <li>전자적 파일: 복구 불가능한 기술로 삭제</li>
+    <li>종이 문서: 분쇄 또는 소각</li>
+  </ul>
 
-    <h2>9. 문의</h2>
-    <p>개인정보처리방침과 관련된 질문이나 우려 사항이 있으시면 아래로 연락해 주세요:</p>
-    <ul>
-        <li><strong>이메일:</strong> tbot17115@gmail.com</li>
-    </ul>
+  <h2>9. 개인정보 보호를 위한 기술적·관리적 대책</h2>
+  <ul>
+    <li>SSL 암호화 통신 적용</li>
+    <li>접근 권한 최소화 및 관리자 인증</li>
+    <li>주기적인 보안 업데이트 및 점검</li>
+  </ul>
 
-    <h2>10. 동의</h2>
-    <p>부모 또는 보호자는 앱을 사용함으로써 본 개인정보처리방침에 동의한 것으로 간주됩니다.</p>
+  <h2>10. 개인정보처리방침의 변경</h2>
+  <ul>
+    <li>본 방침은 서비스 정책, 법령 개정 등에 따라 변경될 수 있습니다.</li>
+    <li>중요 변경 시 앱 내 공지 또는 이메일을 통해 사전 안내합니다.</li>
+  </ul>
 
-    <h2>11. COPPA 준수</h2>
-    <p>개발자는 COPPA(Children’s Online Privacy Protection Act) 및 관련 법률을 준수합니다.</p>
-    <ul>
-        <li>만 13세 미만 어린이의 개인정보는 부모의 동의 없이는 수집하지 않습니다.</li>
-        <li>어린이 개인정보 보호를 위한 기술적, 관리적 조치를 이행하고 있습니다.</li>
-    </ul>
+  <h2>11. 개인정보 보호책임자</h2>
+  <ul>
+    <li><strong>책임자:</strong> hypto</li>
+    <li><strong>이메일:</strong> tbot17115@gmail.com</li>
+  </ul>
 
-    <div class="footer">
-        <p>© 2024 hypto. All rights reserved.</p>
-    </div>
+  <div class="footer">
+    <p>© 2025 hypto. All rights reserved.</p>
+  </div>
 </body>
 </html>
