--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,10 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO 메타 태그 -->
+    <title>넛지 | 스마트 교육 플랫폼 - NUDGE EDU</title>
+    <meta
+      name="description"
+      content="넛지(NUDGE EDU)는 학생과 교사를 위한 스마트 교육 플랫폼입니다. 퀴즈, 채팅봇, 학습 관리 기능을 제공합니다."
+    />
+    <meta
+      name="keywords"
+      content="넛지, nudge, 넛지edu, 교육플랫폼, 스마트교육, 퀴즈, 학습관리, 교육앱"
+    />
+    <meta name="author" content="NUDGE EDU" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph 태그 (소셜 미디어 공유용) -->
+    <meta property="og:title" content="넛지 | 스마트 교육 플랫폼 - NUDGE EDU" />
+    <meta
+      property="og:description"
+      content="넛지(NUDGE EDU)는 학생과 교사를 위한 스마트 교육 플랫폼입니다. 퀴즈, 채팅봇, 학습 관리 기능을 제공합니다."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nudgeflow.co.kr" />
+    <meta property="og:image" content="%PUBLIC_URL%/nudge_logo_512.png" />
+    <meta property="og:site_name" content="NUDGE EDU" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card 태그 -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="넛지 | 스마트 교육 플랫폼 - NUDGE EDU"
+    />
+    <meta
+      name="twitter:description"
+      content="넛지(NUDGE EDU)는 학생과 교사를 위한 스마트 교육 플랫폼입니다."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/nudge_logo_512.png" />
+
+    <!-- 기존 태그들 -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <title>NUDGE</title>
+    <link rel="canonical" href="https://nudgeflow.co.kr" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- 구조화된 데이터 (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "넛지 EDU",
+        "alternateName": ["NUDGE", "넛지", "넛지edu"],
+        "url": "https://nudgeflow.co.kr",
+        "description": "넛지(NUDGE EDU)는 학생과 교사를 위한 스마트 교육 플랫폼입니다.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "NUDGE EDU"
+        }
+      }
+    </script>
+
     <link
       rel="preload"
       href="%PUBLIC_URL%/static/css/main.css"
